--- a/public/css/default.css
+++ b/public/css/default.css
@@ -97,7 +97,7 @@ body{
 }
 
 #menu{
-    display: block;
+    display: inline;
     position: relative;
     top: 50px;
     left: 0px;
@@ -193,4 +193,31 @@ body{
     75% {margin-left: -300%;}
     100% {margin-left: -300%;}
 
+}
+
+
+/* Input Forms*/
+input[type="text"], input[type="password"]{
+  outline: none;
+  padding: 20px;
+  display: block;
+  width: 300px;
+  border-radius: 3px;
+  border: 1px solid #eee;
+  margin: 20px auto;
+}
+
+input[type="submit"] {
+  padding: 10px;
+  color: #fff;
+  background: #0098cb;
+  width: 320px;
+  margin: 20px auto;
+  margin-top: 0;
+  border: 0;
+  border-radius: 3px;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  background-color: #00b8eb;
 }
