--- a/public/css/default.css
+++ b/public/css/default.css
@@ -15,7 +15,7 @@ body{
 #header{
     background-image: url(../img/header.png);
     height: 120px;
-    padding: 10px
+    padding: 10px;
     
 }
 
@@ -166,35 +166,57 @@ body{
 #btnbuscar{
     background-image: url(../img/boton_buscar.png);
 }
-.slider{
-    width: 100%;
-    display: flex;
-}
 
-.slider ul{
+ul, li {
+    margin : 0;
     padding: 0;
-    animation: cambio 20s infinite;
-    animation-direction: alternate;
-}
-.slider li{
     list-style: none;
 }
-.slider img{
-    width: 100%;
+
+ul.slider{
+    position: relative;
+    width: 800px;
+    height: 300px;
 }
 
-@keyframes cambio{
-    0% {margin-left: 0;}
-    20% {margin-left: 0;}
-    25% {margin-left: -100%;}
-    45% {margin-left: -100%;}
-    50% {margin-left: -200%;}
-    70% {margin-left: -200%;}
-    75% {margin-left: -300%;}
-    100% {margin-left: -300%;}
-
+ul.slider li{
+    position: absolute;
+    left: 0;
+    top : 0;
+    opacity: 0;
+    width: inherit;
+    height: inherit;
+    transition: opacity .5s;
 }
 
+ul.slider li:first-child{
+    opacity: 1;
+}
+
+ul.slider li:target{
+    opacity: 1;
+}
+.slider-menu{
+  text-align: center;
+  margin: 20px;
+}
+
+.slider-menu li{
+  display: inline-block;
+  text-align: center;
+}
+
+.slider-menu li a{
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  background-color: grey;
+  padding: 10px;
+  width: 20px;
+  height: 20px;
+  font-size: 20px;
+  border-radius: 100%;
+}
 
 /* Input Forms*/
 input[type="text"], input[type="password"]{
